--- a/MagicHotel.csproj
+++ b/MagicHotel.csproj
@@ -8,6 +8,14 @@
 
   <ItemGroup>
    
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+   
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+   
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.14" />
+   
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.14" />
+   
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.14" />
    
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.14" />
